// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableCell should be rendered correctly 1`] = `
<div
  className="uui-dt-vars root uui-table-cell cell data-table-cell root uui-size-36 align-widgets-top"
  role="cell"
  style={
    Object {
      "--uui-dt-cell-padding-end": "12px",
      "--uui-dt-cell-padding-start": "12px",
      "alignSelf": undefined,
      "flexBasis": "150px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "justifyContent": undefined,
      "minWidth": "150px",
      "textAlign": undefined,
    }
  }
>
  <div>
    Test
  </div>
</div>
`;

exports[`DataTableCell should be rendered correctly 2`] = `
<div
  className="uui-dt-vars root uui-table-cell cell data-table-cell root uui-size-48 uui-dt-last-column align-widgets-top"
  role="cell"
  style={
    Object {
      "--uui-dt-cell-padding-end": "24px",
      "--uui-dt-cell-padding-start": "12px",
      "alignSelf": undefined,
      "flexBasis": "150px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "justifyContent": undefined,
      "minWidth": "150px",
      "textAlign": undefined,
    }
  }
>
  <div>
    Test
  </div>
</div>
`;
